# MIDInet

./: .gitignore  Cargo.toml  Makefile  README.md  midinet.toml
assets/icons/: midinet.icns
config/: client.toml  host.toml
crates/midi-admin/: Cargo.toml
crates/midi-admin/src/: alerting.rs  auth.rs  collector.rs  control_sniffer.rs  discovery.rs  main.rs  metrics_store.rs  midi_sniffer.rs  osc_listener.rs  state.rs  test_generator.rs  websocket.rs
crates/midi-admin/src/api/: alerts.rs  config.rs  devices.rs  failover.rs  focus.rs  input.rs  metrics.rs  mod.rs  pipeline.rs  settings.rs  status.rs  system.rs  test.rs
crates/midi-admin/src/static/: app.js  index.html  style.css
crates/midi-bridge/: Cargo.toml
crates/midi-bridge/src/: main.rs
crates/midi-cli/: Cargo.toml
crates/midi-cli/src/: main.rs
crates/midi-client/: Cargo.toml  build.rs
crates/midi-client/src/: admin_reporter.rs  discovery.rs  failover.rs  focus.rs  health.rs  health_server.rs  main.rs  receiver.rs  virtual_device.rs  watchdog.rs
crates/midi-client/src/platform/: linux.rs  macos.rs  midi_services.rs  mod.rs  te_virtual_midi.rs  windows.rs
crates/midi-client/src/virtual_device/: bridge.rs  mod.rs
crates/midi-client/winmd/: midi2_bindings_reference.rs
crates/midi-device/: Cargo.toml
crates/midi-device/src/: lib.rs
crates/midi-device/src/platform/: linux.rs  macos.rs  midi_services.rs  te_virtual_midi.rs  windows.rs
crates/midi-host/: Cargo.toml
crates/midi-host/src/: broadcast_discovery.rs  broadcaster.rs  discovery.rs  failover.rs  feedback.rs  input_mux.rs  main.rs  metrics.rs  midi_output.rs  osc_listener.rs  pipeline.rs  unicast_relay.rs  usb_detector.rs  usb_reader.rs
crates/midi-loadtest/: Cargo.toml
crates/midi-loadtest/src/: main.rs
crates/midi-protocol/: Cargo.toml  build.rs
crates/midi-protocol/src/: bridge_ipc.rs  health.rs  identity.rs  journal.rs  lib.rs  midi_state.rs  packets.rs  pipeline.rs  ringbuf.rs
crates/midi-protocol/tests/: integration.rs
crates/midi-tray/: Cargo.toml  build.rs
crates/midi-tray/src/: autostart.rs  icons.rs  main.rs  menu.rs  process_manager.rs  updater.rs  ws_client.rs
deploy/: install-client.ps1  install-client.sh  install.sh  midinet-admin.service  midinet-bridge.service  midinet-client.service  midinet-host.service  midinet-update.path  midinet-update.service
docs/: DEPLOYMENT.md
scripts/: client-install-linux.sh  client-install-macos.sh  client-install-windows.ps1  client-uninstall-windows.ps1  deploy-host.sh  deploy.ps1  deploy.sh  install-service.sh  pi-provision.sh  pi-update.sh  setup-pi.sh
