[workspace]
resolver = "2"
members = [
    "crates/midi-protocol",
    "crates/midi-host",
    "crates/midi-client",
    "crates/midi-admin",
    "crates/midi-cli",
    "crates/midi-loadtest",
    "crates/midi-tray",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/midinet/midinet"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Networking
socket2 = "0.5"

# mDNS/DNS-SD discovery
mdns-sd = "0.11"

# OSC protocol
rosc = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Internal crates
midi-protocol = { path = "crates/midi-protocol" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
