[package]
name = "midi-admin"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.32"
reqwest = { workspace = true }
