[package]
name = "midi-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
midi-device = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
