[package]
name = "midi-cli"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
