[package]
name = "midi-client"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.7"
