[package]
name = "midi-client"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
sysinfo = "0.32"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Devices_Enumeration",
    "Devices_Midi",
    "Data_Json",
    "Storage_Streams",
    "Win32_System_Com",
] }
windows-core = "0.58"

[build-dependencies]
windows-bindgen = "0.58"
