[package]
name = "midi-client"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
midi-device = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
sysinfo = "0.32"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
