[package]
name = "midi-loadtest"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
tokio = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
