[package]
name = "midi-tray"
version.workspace = true
edition.workspace = true

[dependencies]
midi-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# System tray (cross-platform, by tauri team)
tray-icon = "0.19"
muda = "0.15"

# Icon generation
image = { version = "0.25", default-features = false, features = ["png"] }

# WebSocket client (sync, for native event loop thread)
tungstenite = "0.24"

# Open URLs in default browser
open = "5"

# Desktop notifications
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = "4"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSEvent", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSDate", "NSRunLoop"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
notify-rust = "4"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Console",
] }
winreg = "0.52"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
